<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tarea.com.contactos.ModificarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Modificar_Contacto"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_nombre"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_mod_nomb"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/btncan"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_apellido"
        android:id="@+id/textView7"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_mod_nomb"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_numero"
        android:id="@+id/textView8"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/txt_mod_ape"
        android:layout_alignEnd="@+id/textView7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_modificar"
        android:id="@+id/btnmod"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:id="@+id/btncan"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_mod_ape"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignEnd="@+id/btncan"
        android:layout_toEndOf="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_mod_num"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/txt_mod_ape"
        android:layout_alignEnd="@+id/btncan"
        android:phoneNumber="true"
        android:maxLength="20" />
</RelativeLayout>
