<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tarea.com.contactos.NuevoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Nuevo_Contacto"
        android:id="@+id/textView"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_nombre"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nombre"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_apellido"
        android:layout_below="@+id/txt_nombre"
        android:layout_marginTop="54dp"
        android:layout_alignEnd="@+id/txt_nombre"
        android:layout_alignStart="@+id/txt_nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_numero"
        android:layout_below="@+id/txt_apellido"
        android:layout_alignStart="@+id/txt_apellido"
        android:layout_marginTop="62dp"
        android:layout_alignEnd="@+id/txt_apellido"
        android:inputType="phone"
        android:longClickable="false"
        android:maxLength="20"
        android:phoneNumber="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_apellido"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/txt_apellido"
        android:layout_toStartOf="@+id/txt_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_numero"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/txt_numero"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
